# flix-admin-videos-python

./: .flake8  .gitignore  .pylintrc  Dockerfile  api.http  db.sqlite3  docker-compose.yml  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json  docker-compose.yml
envs/: .env  .env.e2e.example  .env.test.example
src/__seedwork/application/: dto.py  use_case.py
src/__seedwork/domain/: entities.py  exceptions.py  repositories.py  validators.py  value_objects.py
src/__seedwork/tests/integration/domain/: test_int_validators.py
src/__seedwork/tests/unit/application/: test_unit_dto.py  test_use_case.py
src/__seedwork/tests/unit/domain/: test_unit_entities.py  test_unit_validators.py  test_unit_value_objects.py
src/category/application/: dto.py  use_cases.py
src/category/domain/: entities.py  validators.py
src/category/infra/: repositories.py
src/category/tests/integration/domain/: test_int_entities.py
src/category/tests/unit/application/: test_dto.py  test_unit_use_cases.py
src/category/tests/unit/domain/: test_unit_entities.py  test_unit_repositories.py  test_unit_validators.py
src/category/tests/unit/infra/: test_unit_repositories.py
src/core/: pytest_plugin.py
src/core/__seedwork/application/: dto.py
src/core/__seedwork/domain/: entities.py  exceptions.py  repositories.py  validators.py  value_objects.py
src/core/category/application/: dto.py  use_cases.py
src/core/category/domain/: entities.py  repositories.py  validators.py
src/core/category/infra/django/: api.py  (+6 more)
src/django_app/: config.py  container.py  settings.py  wsgi.py
(+17 files in other folders)
